bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:2: error: Missing closing brace `}' assumed here
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {
^SleepIn:2: error: expected class or object definition
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {
^